--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1657,23 +1657,151 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 .tm-global-wrap {
   margin: 0 auto;
   max-width: 1920px;
-  aside {
-    width: 30%;
-    height: 100px;
-    background: #333;
+  /* Global-wrap-left start */
+  .tm-global-wrap-left {
+    font-family: 'RobotoLight', sans-serif;
+    .tm-as1-wrap {
+      padding-top: 50px;
+      background: #e3e5e4;
+      width: 90%;
+      .tm-as1-block {
+        background: #7d8786;
+        padding: 10px 0;
+        position: relative;
+        left: 50px;
+        ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          li {
+            &.active {
+              border-left: 5px solid  #3597f3;
+              background: #6a7372;
+            }
+            a {
+              display: flex;
+              align-items: center;
+              width: 100%;
+              height: 50px;
+              padding-left: 50px;
+              box-sizing: border-box;
+              font-size: 16px;
+              color: #fff;
+              text-decoration: none;
+            }
+          }
+        }
+      }
+    } /* As1-wrap ends */
+    .tm-as2-wrap {
+      .tm-as2-block {
+        .tm-as2-header {
+          font-size: 32px;
+          color: @text-primary-color;
+          margin: 1.5em 0 1em;
+        }     
+        .tm-as2-video {
+          .tm-as2-v {
+            margin-bottom: 40px;
+          }
+        } 
+        .tm-as2-link {
+          font-size: 16px;
+          font-weight: 300;
+        }  
+      }
+    }/* As2-wrap ends */
+    .tm-as3 {
+      .tm-as3-header {
+        font-size: 32px;
+        color: @text-primary-color;
+        margin: 1.5em 0 1em;
+      }
+      .tm-as3-wrap {
+        padding-top: 50px;
+        background: #e3e5e4;
+        width: 90%;
+        .tm-as3-block {
+          background: #7d8786;
+          padding: 40px 0;
+          position: relative;
+          left: 50px;
+          .tm-as3-more-art {
+            width: 100%;
+            padding: 20px 0;
+            a {
+              text-decoration: none;
+              text-transform: uppercase;
+              padding: 10px;
+              background: @global-color;
+              border-radius: 5px;
+              color: @text-light-color;
+              font-size: 18px;
+              width: 200px;
+              &:hover {
+                background: @button-primary-active-background;
+              }
+              &:active {
+                background: @button-primary-hover-background;
+              }
+            }
+          }
+          ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            li {
+              a.head {
+                border-left: 5px solid  #3597f3;
+                background: #6a7372;
+                display: flex;
+                align-items: center;
+                width: 100%;
+                height: 50px;
+                padding-left: 50px;
+                box-sizing: border-box;
+                font-size: 16px;
+                color: #fff;
+                text-decoration: none;
+                font-size: 22px;
+              }
+              .tm-as3-text {
+                padding: 10px 40px 10px 55px;
+                color: #fff;
+                .tm-as3-more {
+                  padding: 20px 0 10px;
+                  a {
+                    color: #fff;
+                    &:after {
+                      display: inline-block;
+                      content: '';
+                      border: 5px solid transparent;
+                      border-left: 8px solid #fff;
+                      margin-left: 10px;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }/* As3-wrap ends */
   }
+  /* Global-wrap-left end */
   .tm-global-wrap-right {
     /* SEC 1 start */
     .tm-sec1-wrap {
       position: relative;
       font-family: 'RobotoLight', sans-serif;
+      padding-top: 45px;
       .tm-sec1-img {
         position: relative;
         z-index: 2;
       }
       .tm-sec1-discont-text {
         position: absolute;
-        top: 0;
+        top: 45px;
         right: 0;
         width: 44%;
         color: @text-danger-color2;
@@ -1744,7 +1872,23 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 
 
     /* SEC 3 end */
+
+    /* SEC 4 start */
+    .tm-sec4-wrap {
+      .tm-sec4-header {
+        font-size: 40px;
+        color: @text-primary-color;
+        margin: 1em 0;
+      }
+      .tm-sec4-tpls-wrap {
+        img {
+          margin-right: 10px;
+        }
+      }
+    }
+    /* SEC 4 end */
   } /* Global-wrap end */
+
 }/* Global end */
 
 /* Inner Page End */
