add blocks and rwd

--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10565,6 +10565,15 @@ h6 {
   color: #ffffff;
   margin: 1.5em 0;
 }
+#tpls .tm-tpls-wrap .tm-tpls-gal div {
+  overflow: hidden;
+}
+#tpls .tm-tpls-wrap .tm-tpls-gal div a img {
+  transition: transform .3s;
+}
+#tpls .tm-tpls-wrap .tm-tpls-gal div a:hover img {
+  transform: scale(1.1);
+}
 #tpls .tm-tpls-wrap img {
   width: 100%;
 }
@@ -10790,9 +10799,18 @@ h6 {
 .tm-global-wrap {
   margin: 0 auto;
   max-width: 1920px;
+  padding-right: 25px;
   /* Global-wrap-left start */
   /* Global-wrap-left end */
   /* Global-wrap end */
+  /* SEC 5 end */
+  /* SEC 5 end */
+  /* SEC 6 end */
+  /* SEC 6 end */
+  /* SEC 7 end */
+  /* SEC 7 end */
+  /* SEC 8  end */
+  /* SEC 8 end */
 }
 .tm-global-wrap .tm-global-wrap-left {
   font-family: 'RobotoLight', sans-serif;
@@ -10928,7 +10946,7 @@ h6 {
 .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap {
   position: relative;
   font-family: 'RobotoLight', sans-serif;
-  padding-top: 45px;
+  padding-top: 50px;
 }
 .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-img {
   position: relative;
@@ -10957,7 +10975,7 @@ h6 {
   /* left: 7%; */
   width: 27%;
   text-align: center;
-  bottom: 1vw;
+  bottom: .3vw;
   color: #fff;
   font-size: 34px;
   font-weight: 300;
@@ -10979,6 +10997,15 @@ h6 {
   color: #253c7f;
   margin: 1em 0;
 }
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-gal div {
+  overflow: hidden;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-gal div a img {
+  transition: transform .3s;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-gal div a:hover img {
+  transform: scale(1.1);
+}
 .tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-more {
   width: 100%;
 }
@@ -10999,6 +11026,30 @@ h6 {
 }
 .tm-global-wrap .tm-global-wrap-right .tm-sec4-wrap .tm-sec4-tpls-wrap img {
   margin-right: 10px;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec4-wrap .tm-sec4-tpls-wrap a {
+  display: flex;
+  align-items: center;
+  height: 52px;
+  text-decoration: none;
+  color: #344055;
+}
+.tm-global-wrap .tm-calculation-wrap {
+  width: 100%;
+  margin-top: 50px;
+  box-sizing: border-box;
+}
+.tm-global-wrap .tm-contacts-wrap {
+  width: 100%;
+  box-sizing: border-box;
+}
+.tm-global-wrap .tm-map-wrap {
+  width: 100%;
+  box-sizing: border-box;
+}
+.tm-global-wrap .tm-copy-wrap {
+  width: 100%;
+  box-sizing: border-box;
 }
 /* Global end */
 /* Inner Page End */
@@ -11057,6 +11108,22 @@ h6 {
   #vidblk {
     padding-top: 0;
   }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 16px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 100px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
+    bottom: 0;
+    font-size: 24px;
+  }
+  .tm-global-wrap .tm-global-wrap-left .tm-as1-wrap .tm-as1-block {
+    left: 25px;
+  }
+  .tm-global-wrap .tm-global-wrap-left .tm-as3 .tm-as3-wrap .tm-as3-block {
+    left: 25px;
+  }
 }
 @media screen and (max-width: 960px) {
   #constructor {
@@ -11066,6 +11133,18 @@ h6 {
 @media screen and (max-width: 768px) {
   #cont .tm-cont-wrap .tm-cont-block {
     padding-left: 0;
+  }
+}
+@media screen and (max-width: 640px) {
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 12px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 80px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
+    margin-bottom: 5px;
+    font-size: 18px;
   }
 }
 @media screen and (max-width: 500px) {
@@ -11084,5 +11163,15 @@ h6 {
 @media screen and (max-width: 450px) {
   #madein .madein-list {
     width: auto;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 10px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 40px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
+    margin-bottom: 0px;
+    font-size: 12px;
   }
 }
