--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1413,9 +1413,24 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     margin: 1.5em 0;
   }
   .tm-tpls-wrap {
-    img {
-      width: 100%;
-    }
+    .tm-tpls-gal {
+          div {
+            overflow: hidden;
+            a {
+              img {
+                transition: transform .3s;
+              }
+              &:hover {
+                img {
+                  transform: scale(1.1);
+                }
+              }
+            }
+          }
+        }
+        img {
+          width: 100%;
+        }
     .tm-tpls-button {
       margin-top: 100px;
       a {
@@ -1657,6 +1672,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 .tm-global-wrap {
   margin: 0 auto;
   max-width: 1920px;
+  padding-right: 25px;
   /* Global-wrap-left start */
   .tm-global-wrap-left {
     font-family: 'RobotoLight', sans-serif;
@@ -1794,7 +1810,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     .tm-sec1-wrap {
       position: relative;
       font-family: 'RobotoLight', sans-serif;
-      padding-top: 45px;
+      padding-top: 50px;
       .tm-sec1-img {
         position: relative;
         z-index: 2;
@@ -1821,7 +1837,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           /* left: 7%; */
           width: 27%;
           text-align: center;
-          bottom: 1vw;
+          bottom: .3vw;
           color: #fff;
           font-size: 34px;
           font-weight: 300;
@@ -1854,6 +1870,21 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         margin: 1em 0;
       }
       .tm-sec3-tpls-wrap {
+        .tm-sec3-gal {
+          div {
+            overflow: hidden;
+            a {
+              img {
+                transition: transform .3s;
+              }
+              &:hover {
+                img {
+                  transform: scale(1.1);
+                }
+              }
+            }
+          }
+        }
         .tm-sec3-more {
           width: 100%;
           a {
@@ -1884,10 +1915,44 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         img {
           margin-right: 10px;
         }
+        a {
+          display: flex;
+          align-items: center;
+          height: 52px;
+          text-decoration: none;
+          color: @global-color;
+        }
       }
     }
     /* SEC 4 end */
+
+    
   } /* Global-wrap end */
+    /* SEC 5 end */
+    .tm-calculation-wrap {
+      width: 100%;
+      margin-top: 50px;
+      box-sizing: border-box;
+    }
+    /* SEC 5 end */
+    /* SEC 6 end */
+    .tm-contacts-wrap {
+      width: 100%;
+      box-sizing: border-box;
+    }
+    /* SEC 6 end */
+    /* SEC 7 end */
+    .tm-map-wrap {
+      width: 100%;
+      box-sizing: border-box;
+    }
+    /* SEC 7 end */
+    /* SEC 8  end */
+    .tm-copy-wrap {
+      width: 100%;
+      box-sizing: border-box;
+    }
+    /* SEC 8 end */
 
 }/* Global end */
 
@@ -1958,6 +2023,22 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   #vidblk {
     padding-top: 0;
   }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 16px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 100px;
+    p {
+      bottom: 0;
+      font-size: 24px;
+    }
+  }
+  .tm-global-wrap .tm-global-wrap-left .tm-as1-wrap .tm-as1-block {
+    left: 25px;
+  }
+  .tm-global-wrap .tm-global-wrap-left .tm-as3 .tm-as3-wrap .tm-as3-block {
+    left: 25px;
+  }
 }
 @media screen and (max-width: 960px) {
   #constructor {
@@ -1967,6 +2048,18 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 @media screen and (max-width: 768px) {
   #cont .tm-cont-wrap .tm-cont-block {
     padding-left: 0;
+  }
+}
+@media screen and (max-width: 640px) {
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 12px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 80px;
+    p {
+      margin-bottom: 5px;
+      font-size: 18px;
+    }
   }
 }
 @media screen and (max-width: 500px) {
@@ -1985,5 +2078,15 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 @media screen and (max-width: 450px) {
   #madein .madein-list {
     width: auto;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+    font-size: 10px;
+  }
+  .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+    height: 40px;
+    p {
+      margin-bottom: 0px;
+      font-size: 12px;
+    }
   }
 }
