rwd, markup corrections

--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -9943,16 +9943,18 @@ h6 {
 }
 .page-wrapper {
   position: relative;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 .tm-content-full {
   padding: 0 1.5rem;
 }
 /* Header Start */
 .tm-header-wrapp {
-  position: absolute;
+  position: relative;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 .tm-header-topbox {
   background: #0098ff;
@@ -10045,7 +10047,6 @@ h6 {
   width: 100%;
   z-index: 1;
   position: relative;
-  margin-top: 70px;
 }
 .tm-home-slideshow .tm-home-slideshow-nav {
   position: absolute;
@@ -10091,9 +10092,7 @@ h6 {
 }
 .tm-home-slideshow-wrap .tm-home-slideshow-box {
   position: relative;
-  max-width: 1142px;
   width: 100%;
-  padding-top: 125px;
   margin: 0 auto;
 }
 /* Constructor Start */
@@ -10800,6 +10799,7 @@ h6 {
   margin: 0 auto;
   max-width: 1920px;
   padding-right: 25px;
+  padding-bottom: 50px;
   /* Global-wrap-left start */
   /* Global-wrap-left end */
   /* Global-wrap end */
@@ -11130,12 +11130,65 @@ h6 {
     display: none;
   }
 }
+@media screen and (max-width: 900px) {
+  .tm-header-topbox .tm-header-topbox-logo {
+    width: 60px !important;
+  }
+  .tm-header-topbox .tm-header-topbox-logo img {
+    width: 70%;
+  }
+  .tm-header-topbox .tm-header-topbox-name {
+    height: 50px;
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  .tm-header-topbox .tm-header-topbox-name br {
+    display: none;
+  }
+  .tm-header-topbox .tm-header-topbox-name .tm-header-topbox-name1 {
+    font-size: 10px;
+    left: 18px;
+    top: 9px;
+  }
+  .tm-header-topbox .tm-header-topbox-name .tm-header-topbox-name2 {
+    font-size: 10px;
+    margin-top: 16px;
+  }
+  .tm-header-topbox .tm-header-topbox-name .tm-header-topbox-name2 span {
+    font-size: 30px;
+  }
+  .tm-header-topbox .tm-header-topbox-contacts {
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    padding-left: 35px;
+    box-sizing: border-box;
+    font-size: 11px;
+  }
+  .tm-header-topbox .tm-header-topbox-contacts .tm-header-topbox-phone {
+    margin-top: 10px;
+  }
+  .tm-header-topbox .tm-header-topbox-cart a .tm-header-topbox-cart-info {
+    font-size: 11px;
+  }
+}
 @media screen and (max-width: 768px) {
   #cont .tm-cont-wrap .tm-cont-block {
     padding-left: 0;
   }
+  .tm-home-slideshow .tm-home-slideshow-button {
+    bottom: 2em;
+    font-size: 16px;
+  }
 }
 @media screen and (max-width: 640px) {
+  .tm-home-slideshow .tm-home-slideshow-nav li a {
+    width: 10px;
+    height: 10px;
+  }
+  .tm-home-slideshow .tm-home-slideshow-button {
+    font-size: 10px;
+  }
   .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
     font-size: 12px;
   }
@@ -11145,6 +11198,11 @@ h6 {
   .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
     margin-bottom: 5px;
     font-size: 18px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .tm-header-topbox .tm-header-topbox-name {
+    display: none !important;
   }
 }
 @media screen and (max-width: 500px) {
@@ -11173,5 +11231,23 @@ h6 {
   .tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
     margin-bottom: 0px;
     font-size: 12px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .tm-header-topbox .tm-header-topbox-contacts {
+    padding-left: 0;
+    background: none;
+  }
+  .tm-home-slideshow .tm-home-slideshow-nav li a {
+    width: 5px;
+    height: 5px;
+  }
+  .tm-home-slideshow .tm-home-slideshow-button {
+    font-size: 8px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .tm-header-topbox .tm-header-topbox-cart a .tm-header-topbox-cart-info {
+    font-size: 9px;
   }
 }
