--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -765,6 +765,9 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   z-index: 3;
   .tm-header-nav {
     position: relative;
+    a {
+      cursor: pointer !important;
+    }
   }
 }
 .tm-header-topbox {
@@ -1701,8 +1704,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
               display: flex;
               align-items: center;
               width: 100%;
-              height: 50px;
-              padding-left: 50px;
+              padding: 15px 10px 15px 50px;
               box-sizing: border-box;
               font-size: 16px;
               color: #fff;
@@ -1776,8 +1778,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
                 display: flex;
                 align-items: center;
                 width: 100%;
-                height: 50px;
-                padding-left: 50px;
+                padding: 15px 10px 15px 50px;
                 box-sizing: border-box;
                 font-size: 16px;
                 color: #fff;
