--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10137,6 +10137,21 @@ h6 {
 #constructor .js-file:active {
   background: #0098ff;
 }
+#constructor .tm-button-dis {
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 8px;
+  background: #81a1e0;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 18px;
+  font-family: 'RobotoLight', sans-serif;
+  cursor: not-allowed;
+  display: none;
+}
 #constructor .tm-book {
   width: 100%;
   height: 60px;
