--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -962,6 +962,22 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       background: @button-primary-hover-background;
     }
   }
+  .tm-button-dis {
+    display: none;
+    border: none;
+    box-sizing: border-box;
+    width: 100%;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 8px;
+    background: #81a1e0;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 18px;
+    font-family: 'RobotoLight', sans-serif;
+    cursor: not-allowed;
+    display: none;
+  }
   .tm-book {
     width: 100%;
     height: 60px;
