--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1233,10 +1233,10 @@ input:disabled, select:disabled {
         &:hover {
           color: #cecece;
         }
-        &:nth-child(2) {
+        &.close {
           top: 95px;
         }
-        &:nth-child(3) {
+        &.check {
           top: 125px;
         }
       }
