--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1235,9 +1235,13 @@ input:disabled, select:disabled {
         }
         &.close {
           top: 95px;
+          right: 22px;
         }
         &.check {
           top: 125px;
+        }
+        &.trash {
+          top: 155px;
         }
       }
       &:hover {
@@ -1245,6 +1249,7 @@ input:disabled, select:disabled {
       }
       &.tm-del {
         top: 95px;
+        right: 22px;
         &:hover {
           color: #cb3000;
         }
@@ -1269,7 +1274,6 @@ input:disabled, select:disabled {
       }
       &.tm-rem {
         top: 155px;
-        display: block;
         &:hover {
           color: #cb3000;
         }
