set val to default after clear stage

--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1135,7 +1135,8 @@ input:disabled, select:disabled {
 .canvas {
   position: relative;
   /* height: 500px; */
-  width: 975px;
+  /* width: 975px; */
+  width: 890px;
   background: #8e9593;
   .canvas-wrap {
      background: #8e9593; 
@@ -1251,13 +1252,13 @@ input:disabled, select:disabled {
         top: 95px;
         right: 22px;
         &:hover {
-          color: #cb3000;
+          color: pink;
         }
       }
       &.tm-undo {
         top: 220px;
         &:hover {
-          color: lightpink;
+          color: #cb3000;
         }
       }
       &.tm-redo {
