--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10307,7 +10307,8 @@ select:disabled {
 .canvas {
   position: relative;
   /* height: 500px; */
-  width: 975px;
+  /* width: 975px; */
+  width: 890px;
   background: #8e9593;
 }
 .canvas .canvas-wrap {
@@ -10421,13 +10422,13 @@ select:disabled {
   right: 22px;
 }
 .canvas .tm-canv-icon.tm-del:hover {
-  color: #cb3000;
+  color: pink;
 }
 .canvas .tm-canv-icon.tm-undo {
   top: 220px;
 }
 .canvas .tm-canv-icon.tm-undo:hover {
-  color: lightpink;
+  color: #cb3000;
 }
 .canvas .tm-canv-icon.tm-redo {
   top: 250px;
