cursor default hover inactive

--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1230,7 +1230,7 @@ input:disabled, select:disabled {
       &.sub {
         display: block; 
         color: #cecece;
-        cursor: not-allowed;
+        cursor: default;
         &:hover {
           color: #cecece;
         }
