--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10399,7 +10399,7 @@ select:disabled {
 .canvas .tm-canv-icon.sub {
   display: block;
   color: #cecece;
-  cursor: not-allowed;
+  cursor: default;
 }
 .canvas .tm-canv-icon.sub:hover {
   color: #cecece;
