--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1014,11 +1014,27 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         border-color: #fff;
       }
     }
-    &.double {
+    &.sh1 {
       display: flex;
       justify-content: space-between;
       .shape {
         width: 48%;
+      }
+    }
+    &.sh2 {
+      .shape {
+        width: 100%;
+        height: 48%;
+        &:first-child {
+          margin-bottom: 5px;
+        }
+      }
+    }
+    &.sh3 {
+      display: flex;
+      justify-content: space-between;
+      .shape {
+        width: 30%;
       }
     }
   }
