--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10214,6 +10214,62 @@ h6 {
 #constructor .item.sh3 .shape {
   width: 30%;
 }
+#constructor .item.sh4 .shape {
+  width: 100%;
+  height: 30%;
+}
+#constructor .item.sh4 .shape:first-child {
+  margin-bottom: 5px;
+}
+#constructor .item.sh4 .shape:nth-child(2) {
+  margin-bottom: 5px;
+}
+#constructor .item.sh5 {
+  display: flex;
+  justify-content: space-between;
+}
+#constructor .item.sh5 .shape {
+  width: 22%;
+}
+#constructor .item.sh6 {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: center;
+}
+#constructor .item.sh6 .shape {
+  width: 48%;
+  height: 48%;
+}
+#constructor .item.sh6 .shape:nth-child(1),
+#constructor .item.sh6 .shape:nth-child(2) {
+  margin-bottom: 5px;
+}
+#constructor .item.sh6 .shape:nth-child(2n) {
+  margin-left: 5px;
+}
+#constructor .item.sh7 {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: center;
+}
+#constructor .item.sh7 .shape {
+  width: 30%;
+  height: 48%;
+  margin-left: 5px;
+}
+#constructor .item.sh7 .shape:nth-child(1),
+#constructor .item.sh7 .shape:nth-child(2),
+#constructor .item.sh7 .shape:nth-child(3) {
+  margin-bottom: 5px;
+}
+#constructor .item.sh7 .shape:nth-child(1),
+#constructor .item.sh7 .shape:nth-child(4) {
+  margin-left: 0;
+}
 #constructor .tm-book {
   width: 100%;
   height: 60px;
