--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1037,6 +1037,60 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         width: 30%;
       }
     }
+    &.sh4 {
+      .shape {
+        width: 100%;
+        height: 30%;
+        &:first-child {
+          margin-bottom: 5px;
+        }
+        &:nth-child(2) {
+          margin-bottom: 5px;
+        }
+      }
+    }
+    &.sh5 {
+      display: flex;
+      justify-content: space-between;
+      .shape {
+        width: 22%;
+      }
+    }
+    &.sh6 {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: flex-start;
+      align-content: flex-start;
+      justify-content: center;
+      .shape {
+        width: 48%;
+        height: 48%;
+        &:nth-child(1), &:nth-child(2) {
+          margin-bottom: 5px;
+        }
+        &:nth-child(2n) {
+          margin-left: 5px;
+        }
+      }
+    }
+    &.sh7 {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: flex-start;
+      align-content: flex-start;
+      justify-content: center;
+      .shape {
+        width: 30%;
+        height: 48%;
+        margin-left: 5px;
+        &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+          margin-bottom: 5px;
+        }
+        &:nth-child(1), &:nth-child(4) {
+          margin-left: 0;
+        }
+      }
+    }
   }
   .tm-book {
     width: 100%;
