--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10270,6 +10270,82 @@ h6 {
 #constructor .item.sh7 .shape:nth-child(4) {
   margin-left: 0;
 }
+#constructor .item.sh8 {
+  display: flex;
+  justify-content: space-between;
+}
+#constructor .item.sh8 .shape {
+  width: 24%;
+}
+#constructor .item.sh8 .shape:nth-child(2) {
+  width: 47%;
+}
+#constructor .item.sh9 {
+  display: flex;
+  justify-content: space-between;
+}
+#constructor .item.sh9 .shape {
+  width: 48%;
+}
+#constructor .item.sh9 .sh-wrap {
+  width: 48%;
+}
+#constructor .item.sh9 .sh-wrap .shape {
+  width: 100%;
+  height: 47%;
+}
+#constructor .item.sh9 .sh-wrap .shape:first-child {
+  margin-bottom: 5px;
+}
+#constructor .item.sh10 {
+  display: flex;
+  justify-content: space-between;
+}
+#constructor .item.sh10 .shape {
+  width: 35%;
+}
+#constructor .item.sh10 .sh-wrap {
+  width: 63%;
+}
+#constructor .item.sh10 .sh-wrap .shape {
+  width: 100%;
+  height: 29.4%;
+}
+#constructor .item.sh10 .sh-wrap .shape:first-child {
+  margin-bottom: 5px;
+}
+#constructor .item.sh10 .sh-wrap .shape:nth-child(2) {
+  margin-bottom: 5px;
+}
+#constructor .item.sh11 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#constructor .item.sh11 .shape {
+  width: 48%;
+  height: 70%;
+}
+#constructor .item.sh11 .sh-wrap {
+  height: 68%;
+  width: 50%;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: center;
+}
+#constructor .item.sh11 .sh-wrap .shape {
+  width: 43%;
+  height: 47%;
+}
+#constructor .item.sh11 .sh-wrap .shape:first-child,
+#constructor .item.sh11 .sh-wrap .shape:nth-child(2) {
+  margin-bottom: 5px;
+}
+#constructor .item.sh11 .sh-wrap .shape:nth-child(2n) {
+  margin-left: 5px;
+}
 #constructor .tm-book {
   width: 100%;
   height: 60px;
