--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10366,6 +10366,38 @@ h6 {
 #constructor .item.sh12 .shape:nth-child(4) {
   height: 75%;
 }
+#constructor .item.sh13 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#constructor .item.sh13 .shape {
+  width: 18%;
+  margin-left: 5px;
+}
+#constructor .item.sh13 .shape:nth-child(1) {
+  margin-left: 0;
+  margin-top: 10px;
+}
+#constructor .item.sh13 .shape:nth-child(2) {
+  margin-top: 20px;
+}
+#constructor .item.sh13 .shape:nth-child(3) {
+  margin-top: -20px;
+}
+#constructor .item.sh13 .shape:nth-child(4) {
+  margin-top: -10px;
+}
+#constructor .item.sh13 .shape:nth-child(1),
+#constructor .item.sh13 .shape:nth-child(4) {
+  height: 45%;
+  width: 30%;
+}
+#constructor .item.sh13 .shape:nth-child(2),
+#constructor .item.sh13 .shape:nth-child(3) {
+  height: 75%;
+  width: 15%;
+}
 #constructor .tm-book {
   width: 100%;
   height: 60px;
